[gd_scene load_steps=6 format=3 uid="uid://doe8bwwuydqex"]

[ext_resource type="Texture2D" uid="uid://cyd656ov8b6ty" path="res://assets/ui/lobbyPopUp.png" id="1_75slp"]
[ext_resource type="Script" path="res://GameOnline/scripts/createroompop.gd" id="1_ip36j"]
[ext_resource type="FontFile" uid="uid://dui23xil84umq" path="res://assets/fonts/porter-sans-inline-block-webfont.ttf" id="2_ik73d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yafnm"]
bg_color = Color(0.0784314, 0.682353, 0.360784, 1)
border_color = Color(0.0784314, 0.682353, 0.360784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08x2o"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Createroompop" type="Node2D"]
script = ExtResource("1_ip36j")

[node name="LobbyPopUp" type="Sprite2D" parent="."]
position = Vector2(509, 272)
texture = ExtResource("1_75slp")

[node name="Title" type="Label" parent="LobbyPopUp"]
offset_left = -293.0
offset_top = -229.0
offset_right = 267.0
offset_bottom = -159.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ik73d")
theme_override_font_sizes/font_size = 48
text = "Create Room"

[node name="Create Btn" type="Button" parent="LobbyPopUp"]
offset_left = 101.0
offset_top = 188.0
offset_right = 237.0
offset_bottom = 217.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yafnm")
text = "Create
"

[node name="Cancel Btn" type="Button" parent="LobbyPopUp"]
offset_left = -214.0
offset_top = 185.0
offset_right = -78.0
offset_bottom = 214.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_08x2o")
text = "Cancel"

[node name="Room name" type="Label" parent="LobbyPopUp"]
offset_left = -426.0
offset_top = -106.0
offset_right = -336.0
offset_bottom = -83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ik73d")
theme_override_font_sizes/font_size = 25
text = "room name"

[node name="Room Password" type="Label" parent="LobbyPopUp"]
offset_left = -427.0
offset_top = -43.0
offset_right = -352.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ik73d")
theme_override_font_sizes/font_size = 25
text = "Password"

[node name="Password" type="LineEdit" parent="LobbyPopUp"]
offset_left = -169.0
offset_top = -35.0
offset_right = -101.938
offset_bottom = -4.0

[node name="RoomName" type="LineEdit" parent="LobbyPopUp"]
offset_left = -147.0
offset_top = -108.0
offset_right = -79.9375
offset_bottom = -77.0

[connection signal="pressed" from="LobbyPopUp/Create Btn" to="." method="_on_create_btn_pressed"]
[connection signal="pressed" from="LobbyPopUp/Cancel Btn" to="." method="_on_cancel_btn_pressed"]
